--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body {
 header {
     background-color: lavenderblush;
     padding: 10px;
-    border-left: 5px solid blueviolet;
+    border-left: 5px solid darkblue;
 }
 h1 {
-    color: blueviolet;
+    color: darkblue;
 }
